--- a/public/html/write.html
+++ b/public/html/write.html
@@ -10,7 +10,7 @@
 <body>
     <form action="/board/save" method="post">
         <input type="text" name="title">
-        <textarea name="content"></textarea>
+        <textarea name="content">text</textarea>
         <button>저장</button>
     </form>
 </body>
